fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ body {
 }
 
 a {
-  color: #9acd91;
+  color: inherit;
   text-decoration: none;
 }
 
